// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`printToDot > computedAmazonView 1`] = `
"digraph {
  bgcolor = "transparent";
  layout = "dot";
  compound = true;
  rankdir = "TB";
  TBbalance = "min";
  splines = "spline";
  outputorder = "nodesfirst";
  nodesep = 1.25;
  ranksep = 1.25;
  pack = 90;
  packmode = "array_3";
  searchsize = 50;
  graph [
    fontname = "Helvetica";
    fontsize = 13;
    labeljust = "l";
    labelloc = "t";
    margin = 33.21;
    penwidth = 1;
  ];
  edge [
    fontname = "Helvetica";
    fontsize = 13;
    penwidth = 2;
    style = "dashed";
    color = "#6E6E6E";
    fontcolor = "#C6C6C6";
  ];
  node [
    fontname = "Helvetica";
    fontsize = 20;
    fontcolor = "#eff6ff";
    shape = "rect";
    width = 4.723;
    height = 2.639;
    style = "filled";
    fillcolor = "#3b82f6";
    color = "#2563eb";
    penwidth = 0;
    margin = 0.362;
  ];
  subgraph "cluster_cloud" {
    likec4_id = "cloud";
    likec4_level = 0;
    likec4_depth = 1;
    fillcolor = "#194b9e";
    color = "#1b3d88";
    style = "filled";
    margin = 32;
    fontcolor = "#bfdbfeb3";
    label = <<B>CLOUD</B>>;
    "backend" [
      likec4_id = "cloud.backend";
      likec4_level = 1;
    ];
  }
  subgraph "cluster_amazon" {
    likec4_id = "amazon";
    likec4_level = 0;
    likec4_depth = 1;
    fillcolor = "#194b9e";
    color = "#1b3d88";
    style = "filled";
    margin = 32;
    fontcolor = "#bfdbfeb3";
    label = <<B>AMAZON</B>>;
    "s3" [
      likec4_id = "amazon.s3";
      likec4_level = 1;
    ];
  }
  "backend" -> "s3" [
    likec4_id = "cloud.backend:amazon.s3";
    style = "dashed";
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="0" CELLSPACING="4"><TR><TD WIDTH="2"></TD><TD><TABLE ALIGN="LEFT" BORDER="0" CELLBORDER="0" CELLPADDING="0" CELLSPACING="0"><TR><TD ALIGN="LEFT" VALIGN="BOTTOM" HEIGHT="15"><FONT POINT-SIZE="13">persists artifacts</FONT></TD></TR></TABLE></TD></TR></TABLE>>;
    arrowtail = "odiamond";
    dir = "both";
    constraint = false;
  ];
}"
`;

exports[`printToDot > computedCloud3levels 1`] = `
"digraph {
  bgcolor = "transparent";
  layout = "dot";
  compound = true;
  rankdir = "TB";
  TBbalance = "min";
  splines = "spline";
  outputorder = "nodesfirst";
  nodesep = 1.25;
  ranksep = 1.25;
  pack = 90;
  packmode = "array_3";
  searchsize = 50;
  graph [
    fontname = "Helvetica";
    fontsize = 13;
    labeljust = "l";
    labelloc = "t";
    margin = 33.21;
    penwidth = 1;
  ];
  edge [
    fontname = "Helvetica";
    fontsize = 13;
    penwidth = 2;
    style = "dashed";
    color = "#6E6E6E";
    fontcolor = "#C6C6C6";
  ];
  node [
    fontname = "Helvetica";
    fontsize = 20;
    fontcolor = "#eff6ff";
    shape = "rect";
    width = 4.723;
    height = 2.639;
    style = "filled";
    fillcolor = "#3b82f6";
    color = "#2563eb";
    penwidth = 0;
    margin = 0.362;
  ];
  "support" [
    likec4_id = "support";
    likec4_level = 0;
  ];
  "customer" [
    likec4_id = "customer";
    likec4_level = 0;
  ];
  "amazon" [
    likec4_id = "amazon";
    likec4_level = 0;
  ];
  subgraph "cluster_cloud" {
    likec4_id = "cloud";
    likec4_level = 0;
    likec4_depth = 2;
    fillcolor = "#1a468d";
    color = "#1c3979";
    style = "filled";
    margin = 32;
    fontcolor = "#bfdbfeb3";
    label = <<B>CLOUD</B>>;
    "adminpanel" [
      likec4_id = "cloud.frontend.adminPanel";
      likec4_level = 1;
      group = "cloud";
    ];
    "dashboard" [
      likec4_id = "cloud.frontend.dashboard";
      likec4_level = 1;
      group = "cloud";
    ];
    subgraph "cluster_backend" {
      likec4_id = "cloud.backend";
      likec4_level = 1;
      likec4_depth = 1;
      fillcolor = "#194b9e";
      color = "#1b3d88";
      style = "filled";
      margin = 32;
      fontcolor = "#bfdbfeb3";
      label = <<B>BACKEND</B>>;
      "graphql" [
        likec4_id = "cloud.backend.graphql";
        likec4_level = 2;
        group = "cloud";
      ];
      "storage" [
        likec4_id = "cloud.backend.storage";
        likec4_level = 2;
        color = "#2563eb";
        penwidth = 2;
        shape = "cylinder";
        group = "cloud";
      ];
      "graphql" -> "storage" [
        likec4_id = "cloud.backend.graphql:cloud.backend.storage";
        style = "dashed";
        constraint = false;
      ];
    }
    "adminpanel" -> "graphql" [
      likec4_id = "cloud.frontend.adminPanel:cloud.backend.graphql";
      style = "dashed";
      label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="0" CELLSPACING="4"><TR><TD WIDTH="2"></TD><TD><TABLE ALIGN="LEFT" BORDER="0" CELLBORDER="0" CELLPADDING="0" CELLSPACING="0"><TR><TD ALIGN="LEFT" VALIGN="BOTTOM" HEIGHT="15"><FONT POINT-SIZE="13">fetches data in zero trust network</FONT></TD></TR>,<TR><TD ALIGN="LEFT" VALIGN="BOTTOM" HEIGHT="15"><FONT POINT-SIZE="13">with sso authentification</FONT></TD></TR></TABLE></TD></TR></TABLE>>;
    ];
    "dashboard" -> "graphql" [
      likec4_id = "cloud.frontend.dashboard:cloud.backend.graphql";
      style = "dashed";
      label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="0" CELLSPACING="4"><TR><TD WIDTH="2"></TD><TD><TABLE ALIGN="LEFT" BORDER="0" CELLBORDER="0" CELLPADDING="0" CELLSPACING="0"><TR><TD ALIGN="LEFT" VALIGN="BOTTOM" HEIGHT="15"><FONT POINT-SIZE="13">fetches data</FONT></TD></TR></TABLE></TD></TR></TABLE>>;
    ];
  }
  "support" -> "adminpanel" [
    likec4_id = "support:cloud.frontend.adminPanel";
    style = "dashed";
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="0" CELLSPACING="4"><TR><TD WIDTH="2"></TD><TD><TABLE ALIGN="LEFT" BORDER="0" CELLBORDER="0" CELLPADDING="0" CELLSPACING="0"><TR><TD ALIGN="LEFT" VALIGN="BOTTOM" HEIGHT="15"><FONT POINT-SIZE="13">manages</FONT></TD></TR></TABLE></TD></TR></TABLE>>;
  ];
  "customer" -> "dashboard" [
    likec4_id = "customer:cloud.frontend.dashboard";
    style = "dashed";
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="0" CELLSPACING="4"><TR><TD WIDTH="2"></TD><TD><TABLE ALIGN="LEFT" BORDER="0" CELLBORDER="0" CELLPADDING="0" CELLSPACING="0"><TR><TD ALIGN="LEFT" VALIGN="BOTTOM" HEIGHT="15"><FONT POINT-SIZE="13">opens in browser</FONT></TD></TR></TABLE></TD></TR></TABLE>>;
  ];
  "storage" -> "amazon" [
    likec4_id = "cloud.backend.storage:amazon";
    style = "dashed";
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="0" CELLSPACING="4"><TR><TD WIDTH="2"></TD><TD><TABLE ALIGN="LEFT" BORDER="0" CELLBORDER="0" CELLPADDING="0" CELLSPACING="0"><TR><TD ALIGN="LEFT" VALIGN="BOTTOM" HEIGHT="15"><FONT POINT-SIZE="13">persists artifacts</FONT></TD></TR></TABLE></TD></TR></TABLE>>;
    arrowtail = "odiamond";
    dir = "both";
    constraint = false;
  ];
}"
`;

exports[`printToDot > computedCloudView 1`] = `
"digraph {
  bgcolor = "transparent";
  layout = "dot";
  compound = true;
  rankdir = "TB";
  TBbalance = "min";
  splines = "spline";
  outputorder = "nodesfirst";
  nodesep = 1.25;
  ranksep = 1.25;
  pack = 90;
  packmode = "array_3";
  searchsize = 50;
  graph [
    fontname = "Helvetica";
    fontsize = 13;
    labeljust = "l";
    labelloc = "t";
    margin = 33.21;
    penwidth = 1;
  ];
  edge [
    fontname = "Helvetica";
    fontsize = 13;
    penwidth = 2;
    style = "dashed";
    color = "#6E6E6E";
    fontcolor = "#C6C6C6";
  ];
  node [
    fontname = "Helvetica";
    fontsize = 20;
    fontcolor = "#eff6ff";
    shape = "rect";
    width = 4.723;
    height = 2.639;
    style = "filled";
    fillcolor = "#3b82f6";
    color = "#2563eb";
    penwidth = 0;
    margin = 0.362;
  ];
  "customer" [
    likec4_id = "customer";
    likec4_level = 0;
  ];
  "support" [
    likec4_id = "support";
    likec4_level = 0;
  ];
  "amazon" [
    likec4_id = "amazon";
    likec4_level = 0;
  ];
  subgraph "cluster_cloud" {
    likec4_id = "cloud";
    likec4_level = 0;
    likec4_depth = 1;
    fillcolor = "#194b9e";
    color = "#1b3d88";
    style = "filled";
    margin = 32;
    fontcolor = "#bfdbfeb3";
    label = <<B>CLOUD</B>>;
    "frontend" [
      likec4_id = "cloud.frontend";
      likec4_level = 1;
    ];
    "backend" [
      likec4_id = "cloud.backend";
      likec4_level = 1;
    ];
    "frontend" -> "backend" [
      likec4_id = "cloud.frontend:cloud.backend";
      style = "dashed";
      label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="0" CELLSPACING="4"><TR><TD WIDTH="2"></TD><TD><TABLE ALIGN="LEFT" BORDER="0" CELLBORDER="0" CELLPADDING="0" CELLSPACING="0"><TR><TD ALIGN="LEFT" VALIGN="BOTTOM" HEIGHT="15"><B><FONT POINT-SIZE="13">[...]</FONT></B></TD></TR></TABLE></TD></TR></TABLE>>;
      constraint = false;
    ];
  }
  "customer" -> "frontend" [
    likec4_id = "customer:cloud.frontend";
    style = "dashed";
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="0" CELLSPACING="4"><TR><TD WIDTH="2"></TD><TD><TABLE ALIGN="LEFT" BORDER="0" CELLBORDER="0" CELLPADDING="0" CELLSPACING="0"><TR><TD ALIGN="LEFT" VALIGN="BOTTOM" HEIGHT="15"><FONT POINT-SIZE="13">opens in browser</FONT></TD></TR></TABLE></TD></TR></TABLE>>;
  ];
  "support" -> "frontend" [
    likec4_id = "support:cloud.frontend";
    style = "dashed";
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="0" CELLSPACING="4"><TR><TD WIDTH="2"></TD><TD><TABLE ALIGN="LEFT" BORDER="0" CELLBORDER="0" CELLPADDING="0" CELLSPACING="0"><TR><TD ALIGN="LEFT" VALIGN="BOTTOM" HEIGHT="15"><FONT POINT-SIZE="13">manages</FONT></TD></TR></TABLE></TD></TR></TABLE>>;
  ];
  "backend" -> "amazon" [
    likec4_id = "cloud.backend:amazon";
    style = "dashed";
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="0" CELLSPACING="4"><TR><TD WIDTH="2"></TD><TD><TABLE ALIGN="LEFT" BORDER="0" CELLBORDER="0" CELLPADDING="0" CELLSPACING="0"><TR><TD ALIGN="LEFT" VALIGN="BOTTOM" HEIGHT="15"><FONT POINT-SIZE="13">persists artifacts</FONT></TD></TR></TABLE></TD></TR></TABLE>>;
    arrowtail = "odiamond";
    dir = "both";
    constraint = false;
  ];
}"
`;

exports[`printToDot > computedIndexView 1`] = `
"digraph {
  bgcolor = "transparent";
  layout = "dot";
  compound = true;
  rankdir = "TB";
  TBbalance = "min";
  splines = "spline";
  outputorder = "nodesfirst";
  nodesep = 1.25;
  ranksep = 1.25;
  pack = 90;
  packmode = "array_3";
  searchsize = 50;
  graph [
    fontname = "Helvetica";
    fontsize = 13;
    labeljust = "l";
    labelloc = "t";
    margin = 33.21;
    penwidth = 1;
  ];
  edge [
    fontname = "Helvetica";
    fontsize = 13;
    penwidth = 2;
    style = "dashed";
    color = "#6E6E6E";
    fontcolor = "#C6C6C6";
  ];
  node [
    fontname = "Helvetica";
    fontsize = 20;
    fontcolor = "#eff6ff";
    shape = "rect";
    width = 4.723;
    height = 2.639;
    style = "filled";
    fillcolor = "#3b82f6";
    color = "#2563eb";
    penwidth = 0;
    margin = 0.362;
  ];
  "customer" [
    likec4_id = "customer";
    likec4_level = 0;
  ];
  "support" [
    likec4_id = "support";
    likec4_level = 0;
  ];
  "cloud" [
    likec4_id = "cloud";
    likec4_level = 0;
  ];
  "amazon" [
    likec4_id = "amazon";
    likec4_level = 0;
  ];
  "customer" -> "cloud" [
    likec4_id = "customer:cloud";
    style = "dashed";
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="0" CELLSPACING="4"><TR><TD WIDTH="2"></TD><TD><TABLE ALIGN="LEFT" BORDER="0" CELLBORDER="0" CELLPADDING="0" CELLSPACING="0"><TR><TD ALIGN="LEFT" VALIGN="BOTTOM" HEIGHT="15"><FONT POINT-SIZE="13">opens in browser</FONT></TD></TR></TABLE></TD></TR></TABLE>>;
  ];
  "support" -> "cloud" [
    likec4_id = "support:cloud";
    style = "dashed";
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="0" CELLSPACING="4"><TR><TD WIDTH="2"></TD><TD><TABLE ALIGN="LEFT" BORDER="0" CELLBORDER="0" CELLPADDING="0" CELLSPACING="0"><TR><TD ALIGN="LEFT" VALIGN="BOTTOM" HEIGHT="15"><FONT POINT-SIZE="13">manages</FONT></TD></TR></TABLE></TD></TR></TABLE>>;
  ];
  "cloud" -> "amazon" [
    likec4_id = "cloud:amazon";
    style = "dashed";
    label = <<TABLE BORDER="0" CELLBORDER="0" CELLPADDING="0" CELLSPACING="4"><TR><TD WIDTH="2"></TD><TD><TABLE ALIGN="LEFT" BORDER="0" CELLBORDER="0" CELLPADDING="0" CELLSPACING="0"><TR><TD ALIGN="LEFT" VALIGN="BOTTOM" HEIGHT="15"><FONT POINT-SIZE="13">persists artifacts</FONT></TD></TR></TABLE></TD></TR></TABLE>>;
    arrowtail = "odiamond";
    dir = "both";
    constraint = false;
  ];
}"
`;
